--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "homepage": "https://mobodys.github.io/decalife",
-
   "name": "decalife",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
-    "firebase": "^12.6.0",
-    "html2canvas": "^1.4.1",
-    "lucide-react": "^0.556.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -31,8 +28,11 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "firebase": "^12.6.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.556.0",
     "vite": "^7.2.4"
   }
 }
